add font and colors

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
   Contact
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by&nbsp;<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by&nbsp;<a href="https://www.github.com/ednagealmira">Ednagea Almira</a>.
   </div>
 </body>
 </html>
