--- a/index.html
+++ b/index.html
@@ -13,11 +13,56 @@
       href="./images/favicon-32x32.png"
     />
 
+    <script>
+      function myFunction(x) {
+        x.classList.toggle("clicked");
+      }
+    </script>
+
     <title>Frontend Mentor | Sunnyside agency landing page</title>
   </head>
 
   <body>
-    About Services Projects Contact We are creatives Transform your brand We are
+    <div class="container">
+      <img src="images/mobile/image-header.jpg" class="img-hero" />
+      <div class="overlay-content">
+        <div class="content">
+          <div class="navbar">
+            <!-- <img src="images/logo.svg" class="logo" />
+            <img src="images/icon-hamburger.svg" class="hamburger" /> -->
+            <div class="mobile-navbar">
+              <img id="logo" src="images/logo.svg" alt="Sunnyside logo" />
+              <img
+                id="hamburger"
+                src="images/icon-hamburger.svg"
+                alt="hamburger"
+              />
+            </div>
+            <div id="navmenu" class="hide">
+              <div id="tab"></div>
+              <ul>
+                <li><a href="">About</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Projects</a></li>
+              </ul>
+              <a id="contact" href="">
+                <span>Contact</span>
+              </a>
+            </div>
+            <!-- <div class="hamburger" onclick="myFunction(this)">
+              <div class="bar"></div>
+              <div class="bar"></div>
+              <div class="bar no-space"></div>
+            </div> -->
+          </div>
+          <div class="hero">
+            <h1>We are creatives</h1>
+            <img src="images/icon-arrow-down.svg" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- About Services Projects Contact We are creatives Transform your brand We are
     a full-service creative agency specializing in helping brands grow fast.
     Engage your clients through compelling visuals that do most of the marketing
     for you. Learn more Stand out to the right audience Using a collaborative
@@ -33,7 +78,7 @@
     satisfying and enjoyable experience. Thomas S. Chief Operating Officer
     Incredible end result! Our sales increased over 400% when we worked with
     Sunnyside. Highly recommended! Jennie F. Business Owner About Services
-    Projects Contact
+    Projects Contact -->
 
     <div class="attribution">
       Challenge by&nbsp;<a
