adding content for branding class

--- a/main.html
+++ b/main.html
@@ -18,32 +18,48 @@
 
   <body>
     <div class="container">
+      <div class="navbar">
+        <img id="logo" src="images/logo.svg" alt="sunnyside-logo" />
+        <img
+          id="hamburger"
+          src="images/icon-hamburger.svg"
+          alt="hamburger-menu"
+        />
+      </div>
       <div class="container-header">
-        <div class="navbar">
-          <img id="logo" src="images/logo.svg" alt="sunnyside-logo" />
-          <img
-            id="hamburger"
-            src="images/icon-hamburger.svg"
-            alt="hamburger-menu"
-          />
-        </div>
         <div class="content-header">
           <h1>We are creatives</h1>
           <img src="images/icon-arrow-down.svg" alt="arrow-down" />
         </div>
       </div>
-      <!-- <div class="container-branding">
+      <div class="container-branding">
         <div>
           <img src="images/desktop/image-transform.jpg" alt="img-transform" />
         </div>
-        <div class="content-branding"></div>
+        <div class="content-branding">
+          <h2>Transform your brand</h2>
+          <p>
+            We are a full-service creative agency specializing in helping brands
+            grow fast. Engage your clients through compelling visuals that do
+            most of the marketing for you.
+          </p>
+          <a href="" class="link-1">Learn more</a>
+        </div>
         <div>
           <img src="images/desktop/image-stand-out.jpg" alt="img-standout" />
         </div>
-        <div class="content-branding"></div>
-        <div class="content-branding-img"></div>
-        <div class="content-branding-img"></div>
-      </div> -->
+        <div class="content-branding">
+          <h2>Stand out to the right audience</h2>
+          <p>
+            Using a collaborative formula of designers, researchers,
+            photographers, videographers, and copywriters, we’ll build and
+            extend your brand in digital places.
+          </p>
+          <a href="" class="link-2">Learn more</a>
+        </div>
+        <div class="content-branding-img-1"></div>
+        <div class="content-branding-img-2"></div>
+      </div>
     </div>
 
     <div class="attribution">
