mobile view update

--- a/main.html
+++ b/main.html
@@ -57,19 +57,95 @@
           </p>
           <a href="" class="link-2">Learn more</a>
         </div>
-        <div class="content-branding-img-1"></div>
-        <div class="content-branding-img-2"></div>
+        <div class="content-branding-img-1">
+          <h2>Graphic Design</h2>
+          <p>
+            Great design makes you memorable. We deliver artwork that
+            underscores your brand message and captures potential clients’
+            attention.
+          </p>
+        </div>
+        <div class="content-branding-img-2">
+          <h2>Photography</h2>
+          <p>
+            Increase your credibility by getting the most stunning, high-quality
+            photos that improve your business image.
+          </p>
+        </div>
       </div>
-    </div>
-
-    <div class="attribution">
-      Challenge by&nbsp;<a
-        href="https://www.frontendmentor.io?ref=challenge"
-        target="_blank"
-        >Frontend Mentor</a
-      >. Coded by&nbsp;<a href="https://www.github.com/ednagealmira"
-        >Ednagea Almira</a
-      >.
+      <div class="container-testimonial">
+        <h3>Client testimonials</h3>
+        <div class="content-testi">
+          <img src="images/image-emily.jpg" alt="ava-emily" />
+          <p class="client-testi">
+            We put our trust in Sunnyside and they delivered, making sure our
+            needs were met and deadlines were always hit.
+          </p>
+          <p class="client-name">Emily R.</p>
+          <p class="client-profession">Marketing Director</p>
+        </div>
+        <div class="content-testi">
+          <img src="images/image-thomas.jpg" alt="ava-thomas" />
+          <p class="client-testi">
+            Sunnyside’s enthusiasm coupled with their keen interest in our
+            brand’s success made it a satisfying and enjoyable experience.
+          </p>
+          <p class="client-name">Thomas S.</p>
+          <p class="client-profession">Chief Operating Officer</p>
+        </div>
+        <div class="content-testi">
+          <img src="images/image-jennie.jpg" alt="ava-jennie" />
+          <p class="client-testi">
+            Incredible end result! Our sales increased over 400% when we worked
+            with Sunnyside. Highly recommended!
+          </p>
+          <p class="client-name">Jennie F.</p>
+          <p class="client-profession">Business Owner</p>
+        </div>
+      </div>
+      <div class="container-gallery-mobile">
+        <img
+          src="images/mobile/image-gallery-milkbottles.jpg"
+          alt="gallery-1"
+        />
+        <img src="images/mobile/image-gallery-orange.jpg" alt="gallery-2" />
+        <img src="images/mobile/image-gallery-cone.jpg" alt="gallery-3" />
+        <img
+          src="images/mobile/image-gallery-sugar-cubes.jpg"
+          alt="gallery-4"
+        />
+      </div>
+      <div class="footer">
+        <img id="logo" src="images/logo-green.svg" alt="sunnyside-logo-green" />
+        <div class="links">
+          <a href="">About</a>
+          <a href="">Services</a>
+          <a href="">Projects</a>
+        </div>
+        <div class="socials">
+          <a href="">
+            <img src="images/icon-facebook.svg" alt="ic-fb" />
+          </a>
+          <a href="">
+            <img src="images/icon-instagram.svg" alt="ic-ig" />
+          </a>
+          <a href="">
+            <img src="images/icon-twitter.svg" alt="ic-tw" />
+          </a>
+          <a href="">
+            <img src="images/icon-pinterest.svg" alt="ic-pin" />
+          </a>
+        </div>
+        <div class="attribution">
+          Challenge by&nbsp;<a
+            href="https://www.frontendmentor.io?ref=challenge"
+            target="_blank"
+            >Frontend Mentor</a
+          >. Coded by&nbsp;<a href="https://www.github.com/ednagealmira"
+            >Ednagea Almira</a
+          >.
+        </div>
+      </div>
     </div>
   </body>
 </html>
