--- a/main.html
+++ b/main.html
@@ -18,44 +18,52 @@
 
   <body>
     <div class="container">
-      <div class="navbar">
-        <img id="logo" src="images/logo.svg" alt="sunnyside-logo" />
-        <img
-          id="hamburger"
-          src="images/icon-hamburger.svg"
-          alt="hamburger-menu"
-        />
-      </div>
       <div class="container-header">
+        <div class="navbar">
+          <img id="logo" src="images/logo.svg" alt="sunnyside-logo" />
+          <div class="nav-mobile">
+            <img
+              id="hamburger"
+              src="images/icon-hamburger.svg"
+              alt="hamburger-menu"
+            />
+          </div>
+          <div class="nav-desktop">
+            <a href="">About</a>
+            <a href="">Services</a>
+            <a href="">Projects</a>
+            <button href="">Contacts</button>
+          </div>
+        </div>
         <div class="content-header">
           <h1>We are creatives</h1>
           <img src="images/icon-arrow-down.svg" alt="arrow-down" />
         </div>
       </div>
       <div class="container-branding">
-        <div>
+        <div class="transform-img">
           <img src="images/desktop/image-transform.jpg" alt="img-transform" />
         </div>
-        <div class="content-branding">
+        <div class="content-branding-1">
           <h2>Transform your brand</h2>
           <p>
             We are a full-service creative agency specializing in helping brands
             grow fast. Engage your clients through compelling visuals that do
             most of the marketing for you.
           </p>
-          <a href="" class="link-1">Learn more</a>
+          <a href="" class="link">Learn more</a>
         </div>
         <div>
           <img src="images/desktop/image-stand-out.jpg" alt="img-standout" />
         </div>
-        <div class="content-branding">
+        <div class="content-branding-2">
           <h2>Stand out to the right audience</h2>
           <p>
             Using a collaborative formula of designers, researchers,
             photographers, videographers, and copywriters, we’ll build and
             extend your brand in digital places.
           </p>
-          <a href="" class="link-2">Learn more</a>
+          <a href="" class="link">Learn more</a>
         </div>
         <div class="content-branding-img-1">
           <h2>Graphic Design</h2>
@@ -75,45 +83,41 @@
       </div>
       <div class="container-testimonial">
         <h3>Client testimonials</h3>
-        <div class="content-testi">
-          <img src="images/image-emily.jpg" alt="ava-emily" />
-          <p class="client-testi">
-            We put our trust in Sunnyside and they delivered, making sure our
-            needs were met and deadlines were always hit.
-          </p>
-          <p class="client-name">Emily R.</p>
-          <p class="client-profession">Marketing Director</p>
-        </div>
-        <div class="content-testi">
-          <img src="images/image-thomas.jpg" alt="ava-thomas" />
-          <p class="client-testi">
-            Sunnyside’s enthusiasm coupled with their keen interest in our
-            brand’s success made it a satisfying and enjoyable experience.
-          </p>
-          <p class="client-name">Thomas S.</p>
-          <p class="client-profession">Chief Operating Officer</p>
-        </div>
-        <div class="content-testi">
-          <img src="images/image-jennie.jpg" alt="ava-jennie" />
-          <p class="client-testi">
-            Incredible end result! Our sales increased over 400% when we worked
-            with Sunnyside. Highly recommended!
-          </p>
-          <p class="client-name">Jennie F.</p>
-          <p class="client-profession">Business Owner</p>
+        <div class="wrapper-content">
+          <div class="content-testi">
+            <img src="images/image-emily.jpg" alt="ava-emily" />
+            <p class="client-testi">
+              We put our trust in Sunnyside and they delivered, making sure our
+              needs were met and deadlines were always hit.
+            </p>
+            <p class="client-name">Emily R.</p>
+            <p class="client-profession">Marketing Director</p>
+          </div>
+          <div class="content-testi">
+            <img src="images/image-thomas.jpg" alt="ava-thomas" />
+            <p class="client-testi">
+              Sunnyside’s enthusiasm coupled with their keen interest in our
+              brand’s success made it a satisfying and enjoyable experience.
+            </p>
+            <p class="client-name">Thomas S.</p>
+            <p class="client-profession">Chief Operating Officer</p>
+          </div>
+          <div class="content-testi">
+            <img src="images/image-jennie.jpg" alt="ava-jennie" />
+            <p class="client-testi">
+              Incredible end result! Our sales increased over 400% when we
+              worked with Sunnyside. Highly recommended!
+            </p>
+            <p class="client-name">Jennie F.</p>
+            <p class="client-profession">Business Owner</p>
+          </div>
         </div>
       </div>
-      <div class="container-gallery-mobile">
-        <img
-          src="images/mobile/image-gallery-milkbottles.jpg"
-          alt="gallery-1"
-        />
-        <img src="images/mobile/image-gallery-orange.jpg" alt="gallery-2" />
-        <img src="images/mobile/image-gallery-cone.jpg" alt="gallery-3" />
-        <img
-          src="images/mobile/image-gallery-sugar-cubes.jpg"
-          alt="gallery-4"
-        />
+      <div class="container-gallery">
+        <div class="gallery-1"></div>
+        <div class="gallery-2"></div>
+        <div class="gallery-3"></div>
+        <div class="gallery-4"></div>
       </div>
       <div class="footer">
         <img id="logo" src="images/logo-green.svg" alt="sunnyside-logo-green" />
