fixing nav menu for desktop

--- a/main.html
+++ b/main.html
@@ -28,11 +28,11 @@
               alt="hamburger-menu"
             />
           </div>
-          <div class="nav-desktop">
+          <div class="nav-menu">
             <a href="">About</a>
             <a href="">Services</a>
             <a href="">Projects</a>
-            <button href="">Contacts</button>
+            <button href="">Contact</button>
           </div>
         </div>
         <div class="content-header">
