pop-up menu for mobile done

--- a/index.html
+++ b/index.html
@@ -13,81 +13,33 @@
       href="./images/favicon-32x32.png"
     />
 
-    <script>
-      function myFunction(x) {
-        x.classList.toggle("clicked");
-      }
-    </script>
-
     <title>Frontend Mentor | Sunnyside agency landing page</title>
   </head>
 
   <body>
     <div class="container">
-      <img src="images/mobile/image-header.jpg" class="img-hero" />
-      <div class="overlay-content">
-        <div class="content">
-          <div class="navbar">
-            <!-- <img src="images/logo.svg" class="logo" />
-            <img src="images/icon-hamburger.svg" class="hamburger" /> -->
-            <div class="mobile-navbar">
-              <img id="logo" src="images/logo.svg" alt="Sunnyside logo" />
-              <img
-                id="hamburger"
-                src="images/icon-hamburger.svg"
-                alt="hamburger"
-              />
-            </div>
-            <div id="navmenu" class="hide">
-              <div id="tab"></div>
-              <ul>
-                <li><a href="">About</a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">Projects</a></li>
-              </ul>
-              <a id="contact" href="">
-                <span>Contact</span>
-              </a>
-            </div>
-            <!-- <div class="hamburger" onclick="myFunction(this)">
-              <div class="bar"></div>
-              <div class="bar"></div>
-              <div class="bar no-space"></div>
-            </div> -->
+      <div class="container-header">
+        <div class="navbar">
+          <img id="logo" src="images/logo.svg" alt="sunnyside-logo" />
+          <div class="nav-mobile">
+            <img
+              id="hamburger"
+              src="images/icon-hamburger.svg"
+              alt="hamburger-menu"
+            />
           </div>
-          <div class="hero">
-            <h1>We are creatives</h1>
-            <img src="images/icon-arrow-down.svg" />
+          <div class="nav-menu">
+            <a href="">About</a>
+            <a href="">Services</a>
+            <a href="">Projects</a>
+            <button href="">Contact</button>
           </div>
         </div>
+        <div class="content-header">
+          <h1>We are creatives</h1>
+          <img src="images/icon-arrow-down.svg" alt="arrow-down" />
+        </div>
       </div>
-    </div>
-    <!-- About Services Projects Contact We are creatives Transform your brand We are
-    a full-service creative agency specializing in helping brands grow fast.
-    Engage your clients through compelling visuals that do most of the marketing
-    for you. Learn more Stand out to the right audience Using a collaborative
-    formula of designers, researchers, photographers, videographers, and
-    copywriters, we’ll build and extend your brand in digital places. Learn more
-    Graphic design Great design makes you memorable. We deliver artwork that
-    underscores your brand message and captures potential clients’ attention.
-    Photography Increase your credibility by getting the most stunning,
-    high-quality photos that improve your business image. Client testimonials We
-    put our trust in Sunnyside and they delivered, making sure our needs were
-    met and deadlines were always hit. Emily R. Marketing Director Sunnyside’s
-    enthusiasm coupled with their keen interest in our brand’s success made it a
-    satisfying and enjoyable experience. Thomas S. Chief Operating Officer
-    Incredible end result! Our sales increased over 400% when we worked with
-    Sunnyside. Highly recommended! Jennie F. Business Owner About Services
-    Projects Contact -->
-
-    <div class="attribution">
-      Challenge by&nbsp;<a
-        href="https://www.frontendmentor.io?ref=challenge"
-        target="_blank"
-        >Frontend Mentor</a
-      >. Coded by&nbsp;<a href="https://www.github.com/ednagealmira"
-        >Ednagea Almira</a
-      >.
     </div>
   </body>
 </html>
