--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | Sunnyside agency landing page</title>
+    <title>Frontend Mentor | Sunnyside agency landing page | by ednagea</title>
   </head>
 
   <body>
