--- a/main.html
+++ b/main.html
@@ -13,7 +13,9 @@
       href="./images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | Sunnyside agency landing page | by ednagea</title>
+    <title>
+      ednagealmira | Sunnyside agency landing page | Frontend Mentor
+    </title>
   </head>
 
   <body>
