--- a/main.html
+++ b/main.html
@@ -23,14 +23,14 @@
       <div class="container-header">
         <div class="navbar">
           <img id="logo" src="images/logo.svg" alt="sunnyside-logo" />
-          <div class="nav-mobile">
+          <div class="nav-mobile" id="nav-mobile">
             <img
               id="hamburger"
               src="images/icon-hamburger.svg"
               alt="hamburger-menu"
             />
           </div>
-          <div class="nav-menu">
+          <div id="nav-menu" class="hide">
             <a href="">About</a>
             <a href="">Services</a>
             <a href="">Projects</a>
@@ -154,4 +154,6 @@
       </div>
     </div>
   </body>
+
+  <script src="js/main.js"></script>
 </html>
